# cmake_demo

./: CMakeLists.txt  README.md  calc.cpp  calc.h  main.cpp
MathBox/: CMakeLists.txt  tools.cpp  tools.h
